--- a/index.html
+++ b/index.html
@@ -93,6 +93,34 @@
     </div>
   </header>
 
+  <main id="main">
+    <div id="section-1">
+      <img id="section-1__img" src="./assets/images/image-man-eating.webp" alt="Man eating sushi"/>
+      <div id="section-1__main">
+        <h2 id="section-1__title">What your BMI result means</h2>
+        <p id="section-1__body">A BMI range of 18.5 to 24.9 is considered a 'healthy weight.' Maintaining a healthy weight may lower your chances of experiencing health issues later on, such as obesity and type 2 diabetes. Aim for a nutritious diet with reduced fat and sugar content, incorporating ample fruits and vegetables. Additionally, strive for regular physical activity, ideally about 30 minutes daily for five days a week.</p>
+      </div>
+    </div>
+
+    <div id="section-2">
+      <div class="section-2__item">
+        <img class="section-2__item-icon" src="./assets/images/icon-eating.svg" alt="Eating icon"/>
+        <h3 class="section-2__item-title">Healthy eating</h3>
+        <p class="section-2__item-body">Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.</p>
+      </div>
+      <div class="section-2__item">
+        <img class="section-2__item-icon" src="./assets/images/icon-exercise.svg" alt="Exercise icon"/>
+        <h3 class="section-2__item-title">Regular exercise</h3>
+        <p class="section-2__item-body">Exercise improves fitness, aids weight control, elevates mood, and reduces disease risk, fostering wellness and longevity.</p>
+      </div>
+      <div class="section-2__item">
+        <img class="section-2__item-icon" src="./assets/images/icon-sleep.svg" alt="Sleep icon"/>
+        <h3 class="section-2__item-title">Adequate sleep</h3>
+        <p class="section-2__item-body">Sleep enhances mental clarity, emotional stability, and physical wellness, promoting overall restoration and rejuvenation.</p>
+      </div>
+    </div>
+  </main>
+
   Body Mass Index Calculator
 
   Better understand your in in relation to your height using our 
