--- a/index.html
+++ b/index.html
@@ -119,6 +119,100 @@
         <p class="section-2__item-body">Sleep enhances mental clarity, emotional stability, and physical wellness, promoting overall restoration and rejuvenation.</p>
       </div>
     </div>
+
+    <div id="section-3">
+      <div id="section-3__header">
+        <h2 class="section-3__title">Limitations of BMI</h2>
+        <p class="section-3__body">Although BMI is often a practical indicator of healthy weight, it is not suited for every person. Specific groups should carefully consider their BMI outcomes, and in certain cases, the measurement may not be beneficial to use.</p>
+      </div>
+
+      <div id="section-3__grid">
+
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-gender.svg" alt="Gender icon"/>
+            <h4 class="section-3__item-title">Gender</h4>
+          </div>
+          <p class="section-3__item-body">The development and body fat composition of girls and boys vary with age. Consequently, a child's age and gender are considered when evaluating their BMI.</p>
+        </div>
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-age.svg" alt="Age icon"/>
+            <h4 class="section-3__item-title">Age</h4>
+          </div>
+          <p class="section-3__item-body">In aging individuals, increased body fat and muscle loss may cause BMI to underestimate body fat content.</p>
+        </div>
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-muscle.svg" alt="Muscle icon"/>
+            <h4 class="section-3__item-title">Muscle</h4>
+          </div>
+          <p class="section-3__item-body">BMI may misclassify muscular individuals as overweight or obese, as it doesn't differentiate muscle from fat.</p>
+        </div>
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-pregnancy.svg" alt="Pregnancy icon"/>
+            <h4 class="section-3__item-title">Pregnancy</h4>
+          </div>
+          <p class="section-3__item-body">BMI may misclassify muscular individuals as overweight or obese, as it doesn't differentiate muscle from fat.</p>
+        </div>
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-race.svg" alt="Race icon"/>
+            <h4 class="section-3__item-title">Race</h4>
+          </div>
+          <p class="section-3__item-body">Certain health concerns may affect individuals of some Black and Asian origins at lower BMIs than others. To learn more, it is advised to discuss this with your GP or practice nurse.</p>
+        </div>
+      </div>
+    </div>
+
+    <div id="section-3--desktop">
+      <div id="section-3__row-1">
+        <div id="section-3__content">
+          <h2 class="section-3__title">Limitations of BMI</h2>
+          <p class="section-3__body">Although BMI is often a practical indicator of healthy weight, it is not suited for every person. Specific groups should carefully consider their BMI outcomes, and in certain cases, the measurement may not be beneficial to use.</p>
+        </div>
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-gender.svg" alt="Gender icon"/>
+            <h4 class="section-3__item-title">Gender</h4>
+          </div>
+          <p class="section-3__item-body">The development and body fat composition of girls and boys vary with age. Consequently, a child's age and gender are considered when evaluating their BMI.</p>
+        </div>
+      </div>
+      <div id="section-3__row-2">
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-age.svg" alt="Age icon"/>
+            <h4 class="section-3__item-title">Age</h4>
+          </div>
+          <p class="section-3__item-body">In aging individuals, increased body fat and muscle loss may cause BMI to underestimate body fat content.</p>
+        </div>
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-muscle.svg" alt="Muscle icon"/>
+            <h4 class="section-3__item-title">Muscle</h4>
+          </div>
+          <p class="section-3__item-body">BMI may misclassify muscular individuals as overweight or obese, as it doesn't differentiate muscle from fat.</p>
+        </div>
+      </div>
+      <div id="section-3__row-3">
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-pregnancy.svg" alt="Pregnancy icon"/>
+            <h4 class="section-3__item-title">Pregnancy</h4>
+          </div>
+          <p class="section-3__item-body">BMI may misclassify muscular individuals as overweight or obese, as it doesn't differentiate muscle from fat.</p>
+        </div>
+        <div class="section-3__item">
+          <div class="section-3__item-top">
+            <img class="section-3__item-icon" src="./assets/images/icon-race.svg" alt="Race icon"/>
+            <h4 class="section-3__item-title">Race</h4>
+          </div>
+          <p class="section-3__item-body">Certain health concerns may affect individuals of some Black and Asian origins at lower BMIs than others. To learn more, it is advised to discuss this with your GP or practice nurse.</p>
+        </div>
+      </div>
+    </div>
   </main>
 
   Body Mass Index Calculator
