--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             <div id="bmi__metric-height-container">
               <label id="bmi__metric-height-label" class="bmi__stat-label" for="bmi__metric-height-input">Height</label5>
               <div id="bmi__metric-height-input-container" class="bmi__input-container">
-                <input type="number" id="bmi__metric-height-input" class="bmi__input"/>
+                <input type="number" id="bmi__metric-height-input" class="bmi__input" placeholder="0"/>
                 <p id="bmi__cm" class="bmi__measurement">cm</p>
               </div>
             </div>
             <div id="bmi__metric-weight-container">
               <label id="bmi__metric-weight-label" class="bmi__stat-label" for="bmi__metric-weight-input">Weight</label5>
               <div id="bmi__metric-weight-input-container" class="bmi__input-container">
-                <input type="number" id="bmi__metric-weight-input" class="bmi__input"/>
+                <input type="number" id="bmi__metric-weight-input" class="bmi__input" placeholder="0"/>
                 <p id="bmi__kg" class="bmi__measurement">kg</p>
               </div>
             </div>
@@ -50,30 +50,31 @@
             <div id="bmi__imperial-ft-container">
               <label id="bmi__imperial-ft-label" class="bmi__stat-label" for="bmi__imperial-ft-input">Height</label5>
               <div id="bmi__imperial-ft-input-container" class="bmi__input-container">
-                <input type="number" id="bmi__imperial-ft-input" class="bmi__input"/>
+                <input type="number" id="bmi__imperial-ft-input" class="bmi__input" placeholder="0"/>
                 <p id="bmi__ft" class="bmi__measurement">ft</p>
               </div>
             </div>
             <div id="bmi__imperial-in-container">
               <div id="bmi__imperial-in-input-container" class="bmi__input-container">
-                <input type="number" id="bmi__imperial-in-input" class="bmi__input"/>
+                <input type="number" id="bmi__imperial-in-input" class="bmi__input" placeholder="0"/>
                 <p id="bmi__in" class="bmi__measurement">in</p>
               </div>
             </div>
             <div id="bmi__imperial-st-container">
               <label id="bmi__imperial-st-label" class="bmi__stat-label" for="bmi__imperial-st-input">Weight</label5>
               <div id="bmi__imperial-st-input-container" class="bmi__input-container">
-                <input type="number" id="bmi__imperial-st-input" class="bmi__input"/>
-                <p id="bmi__st" class="bmi__measurement">st</p>
+                <input type="number" id="bmi__imperial-st-input" class="bmi__input" placeholder="0"/>
+                <p id="bmi__st" class="bmi__measurement">st</p> 
               </div>
             </div>
             <div id="bmi__imperial-lbs-container">
               <div id="bmi__imperial-lbs-input-container" class="bmi__input-container">
-                <input type="number" id="bmi__imperial-lbs-input" class="bmi__input"/>
+                <input type="number" id="bmi__imperial-lbs-input" class="bmi__input" placeholder="0"/>
                 <p id="bmi__lbs" class="bmi__measurement">lbs</p>
               </div>
             </div>
           </div>
+          <input id="bmi__submitter" type="submit"/>
         </form>
 
         <div id="bmi__result">
